# src/lib/swagger.yaml
@@ -1337,6 +1337,36 @@ paths:
                     items:
                       type: string
                       example: ''
+  /api/tools/anti-porn:
+    get:
+      tags:
+        - Tools
+      parameters:
+        - name: url
+          in: query
+          required: true
+          schema:
+            type: string
+          description: URL of the image to be checked
+      responses:
+        '200':
+          description: Successful response
+          content:
+            application/json:
+              example:
+                nsfw: false
+        '400':
+          description: Bad Request
+          content:
+            application/json:
+              example:
+                error: Parameter url not found
+        '500':
+          description: Internal Server Error
+          content:
+            application/json:
+              example:
+                error: Internal server error
   /api/upload/cdn:
     post:
       tags:
