# src/routes/api/tools.js
@@ -3,6 +3,7 @@ import {
   translate, 
   langList
   } from '../../scrape/src/tools/translate.js'; 
+  import { cekGambar } from "../../scrape/src/tools/antiPorn.js";
 import apiKeyMiddleware from '../../middlewares/apiKeyMiddleware.js';
 const author = 'xyla';
 const apiR = express.Router();
@@ -36,6 +37,26 @@ apiR.get('/langList', apiKeyMiddleware, async (req, res) => {
     console.error(error);
     res.status(500).json({ error: 'Internal server error.' });
   }
+});
+
+apiR.get('/anti-porn', apiKeyMiddleware, async (req, res) => {
+    const imgUrl = req.query.url;
+
+    try {
+        if (!imgUrl) {
+            return res.status(400).json({ error: 'Parameter url tidak ditemukan' });
+        }
+
+        const data = await cekGambar(imgUrl);
+        res.json({
+        status: "Success",
+        code: 200,
+        author,
+        data
+     });
+    } catch (error) {
+        res.status(500).json({ error: 'Terjadi kesalahan dalam server' });
+    }
 });
 
 
